# Hayanagi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: bitboard.h  book.cpp  book.h  main.cpp  position.cpp  position.h  search.cpp  search.h  types.h  usi_engine.cpp  usi_engine.h
